[gd_scene format=3 uid="uid://c83viscthosp4"]

[ext_resource type="Script" uid="uid://by253sa4tel0u" path="res://card_maker/delete_menu/delete_menu.gd" id="1_nro57"]

[node name="DeleteMenu" type="ColorRect" unique_id=608963587]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.105882354)
script = ExtResource("1_nro57")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1418920752]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=476518464]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer" unique_id=1724982414]
layout_mode = 2

[node name="Question" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=981449062]
layout_mode = 2
size_flags_horizontal = 4
text = "Are you sure you want to delete"

[node name="NodeNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1360180344]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Node Name"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=511252989]
layout_mode = 2
size_flags_horizontal = 4

[node name="YesButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=288866515]
layout_mode = 2
text = "Yes"

[node name="NoButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1051354702]
layout_mode = 2
text = "No"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
